--- a/SistemaNoleggi_UWP/AddClientePage.xaml
+++ b/SistemaNoleggi_UWP/AddClientePage.xaml
@@ -12,13 +12,15 @@
         <TextBlock Text="Aggiungi Cliente" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="40"></TextBlock>
 
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="182" Width="335">
-            <TextBox PlaceholderText="Inserisci Nome" Name="txtbox_Nome" HorizontalAlignment="Center" Height="50" Margin="0,10,0,122" Width="134"/>
-            <TextBox PlaceholderText="Inserisci Cognome" Name="txtbox_Cognome" HorizontalAlignment="Center" Height="50" Margin="0,66,0,66"/>
-            <TextBox PlaceholderText="Inserisci Codice Fiscale" Name="txtbox_Cf" HorizontalAlignment="Center" Height="50" Margin="0,122,0,10"/>
+
+            <StackPanel>
+                <TextBox Header="Nome" PlaceholderText="Inserisci Nome" Name="txtbox_Nome" HorizontalAlignment="Center"/>
+                <TextBox Header="Cognome" PlaceholderText="Inserisci Cognome" Name="txtbox_Cognome" HorizontalAlignment="Center"/>
+                <TextBox Header="Codice Fiscale" PlaceholderText="Inserisci Codice Fiscale" Name="txtbox_Cf" HorizontalAlignment="Center"/>
+            </StackPanel>
         </Grid>
 
-        <Button Background="Transparent" Name="btn_Save_Click" Click="btn_Save" Width="130" Height="70" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-            <Border Width="101" Height="50" CornerRadius="15" Background="LightGray"></Border>
-        </Button>
+        <Button Content="Salva" Name="OnbtnSalva" Click="OnbtnSalva_Click" VerticalAlignment="Bottom" Margin="153,0,0,0"/>
+        <Button Content="Annulla" Name="OnbtnAnnulla" Click="OnbtnAnnulla_Click" VerticalAlignment="Bottom" Margin="299,0,0,0"/>
     </Grid>
 </Page>
