Aggiunta la possibilitá di generare un istanza di un Furgone

--- a/SistemaNoleggi_UWP/MainPage.xaml
+++ b/SistemaNoleggi_UWP/MainPage.xaml
@@ -39,7 +39,7 @@
                 <MenuFlyoutItem Text="Noleggio"/>
                 <MenuFlyoutItem Text="Cliente" Click="OnClienteMenu_Click"/>
                 <MenuFlyoutItem Text="Automobile" Click="OnAutomobileMenu_Click"/>
-                <MenuFlyoutItem Text="Furgone"/>
+                <MenuFlyoutItem Text="Furgone" Click="OnFurgoneMenu_Click"/>
             </MenuBarItem>
 
             <MenuBarItem Title="Rimuovi">
