--- a/SistemaNoleggi_UWP/ClientiPage.xaml
+++ b/SistemaNoleggi_UWP/ClientiPage.xaml
@@ -2,15 +2,28 @@
     x:Class="SistemaNoleggi_UWP.ClientiPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SistemaNoleggi_UWP"
+    xmlns:local="using:Noleggio_Library"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Padding="40">
+    <StackPanel Padding="40">
         <TextBlock Text="Clienti" FontSize="50" />
-        <controls:DataGrid x:Name="grdView"  AutoGenerateColumns="True" Margin="0,80,0,0" />
-    </Grid>
+        <ListView x:Name="listViewClienti" Margin="0,10,0,0" HorizontalAlignment="Left">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="local:Cliente">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="800" />
+                            <ColumnDefinition Width="200" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock xml:space="preserve" Text="{x:Bind}" FontSize="15" />
+                        <Button Grid.Column="1" Content="Rimuovi" Click="removeCliente_Click" HorizontalAlignment="Stretch" />
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackPanel>
 </Page>
