Inizio sviluppo della conversione da oggetti a file csv e viceversa.

--- a/SistemaNoleggi_UWP/MainPage.xaml
+++ b/SistemaNoleggi_UWP/MainPage.xaml
@@ -10,31 +10,27 @@
 
     <Grid FocusVisualPrimaryBrush="White">
 
-        <!--<SplitView x:Name="splViewItems" DisplayMode="CompactOverlay" CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Margin="0,40,0,0">
-            <SplitView.Pane>
-                <StackPanel>
-                    <Button Content="Noleggi" Height="50" Background="Transparent" Click="OnSplitViewNoleggi_Click" HorizontalAlignment="Stretch"/>
-                    <Button Content="Veicoli" Height="50" Background="Transparent" Click="OnSplitViewVeicoli_Click" HorizontalAlignment="Stretch"/>
-                    <Button Content="Clienti" Height="50" Background="Transparent" Click="OnSplitViewClienti_Click" HorizontalAlignment="Stretch"/>
-                </StackPanel>
-            </SplitView.Pane>
-        </SplitView>-->
+        <NavigationView Loaded="NavigationView_Loaded" SelectionChanged="NavigationView_SelectionChanged">
+            <NavigationView.MenuItems>
+                <NavigationViewItem Icon="Folder" Content="Noleggi" Tag="noleggi"/>
+                <NavigationViewItem Icon="Favorite" Content="Veicoli" Tag="veicoli"/>
+                <NavigationViewItem Icon="People" Content="Clienti" Tag="clienti"/>
+            </NavigationView.MenuItems>
 
-            <NavigationView Loaded="NavigationView_Loaded" SelectionChanged="NavigationView_SelectionChanged">
-                <NavigationView.MenuItems>
-                    <NavigationViewItem Icon="Folder" Content="Noleggi" Tag="noleggi" />
-                <NavigationViewItem Icon="Favorite" Content="Veicoli" Tag="veicoli" />
-                    <NavigationViewItem Icon="People" Content="Clienti" Tag="clienti" />
-                </NavigationView.MenuItems>
-
-                <ScrollViewer>
-                    <Frame x:Name="ContentFrame">
-                    </Frame>
-                </ScrollViewer>
-            </NavigationView>
+            <ScrollViewer>
+                <Frame x:Name="ContentFrame"></Frame>
+            </ScrollViewer>
+        </NavigationView>
         
         
         <MenuBar Width="Auto" VerticalAlignment="Top" Height="40" Margin="50,0,0,0" >
+
+            <MenuBarItem Title="File">
+                <MenuFlyoutItem Text="Salva" Click="OnCsvFileSalva_Click"></MenuFlyoutItem>
+                <MenuFlyoutItem Text="Aggiorna" Click="OnCsvFileAggiorna_Click"></MenuFlyoutItem>
+                <MenuFlyoutItem Text="Carica" Click="OnCsvFileCarica_Click"></MenuFlyoutItem>
+            </MenuBarItem>
+            
             <MenuBarItem Title="Aggiungi">
                 <MenuFlyoutItem Text="Noleggio" Click="OnNoleggioMenu_Click"/>
                 <MenuFlyoutItem Text="Cliente" Click="OnClienteMenu_Click"/>
