--- a/SistemaNoleggi_UWP/NoleggiPage.xaml
+++ b/SistemaNoleggi_UWP/NoleggiPage.xaml
@@ -7,7 +7,9 @@
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Loaded="NoleggiPage_Loaded"
+    >
 
     <StackPanel Padding="40">
         <TextBlock Text="Noleggi" FontSize="50" />
