--- a/SistemaNoleggi_UWP/ClientiPage.xaml
+++ b/SistemaNoleggi_UWP/ClientiPage.xaml
@@ -7,8 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    Loaded="ClientiPage_Loaded">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <StackPanel Padding="40">
         <TextBlock Text="Clienti" FontSize="50" />
